# impulseia-backend

./: .gitignore  pyproject.toml
backend/: settings.py  urls.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_rename_url_project_appstore_url_and_more.py  0003_rename_thumbail_blogpost_thumbnail.py
users/: admin.py  managers.py  models.py
users/migrations/: 0001_initial.py
